# nyaya-platform

./: .env.example  .gitignore  CLAUDE.md  CODEOWNERS  HANDOFF.md  PROMPT_FOR_CLAUDE.md  README.md  mock_api.py  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.claude/: launch.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto_ingest.yml  ci.yml  security-scan.yml
apps/admin-ui/: Dockerfile  package.json  tailwind.config.ts
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/api/: __init__.py  config.py  database.py  dependencies.py  main.py
apps/api/api/middleware/: audit.py  auth.py  rate_limit.py  request_id.py
apps/api/api/models/: __init__.py  case.py  event.py  user.py
apps/api/api/routers/: admin.py  ask.py  cases.py  export.py  health.py  moderation.py  search.py  stats.py
apps/api/api/services/: ask_service.py  case_service.py  search_service.py
apps/api/tests/: test_ask.py  test_auth.py  test_cases.py
apps/frontend/: Dockerfile  check_supabase.js  next.config.mjs  next.config.ts  package.json  tailwind.config.ts
apps/frontend/messages/: en.json  hi.json  mr.json  ta.json
apps/frontend/scripts/: ingest.ts  seed-precedents-embeddings.ts
apps/frontend/src/: middleware.ts
docker/: docker-compose.yml
docs/: 01-architecture-overview.md  02-privacy-engine.md  03-ai-extraction.md  04-entity-resolution.md  05-deployment.md  06-data-sources.md  07-ai-first-product-strategy.md
docs/agents/: 01-anomaly-detection.md  02-recommendation.md  03-moderation.md  04-rti-assistant.md  05-multilingual-summarizer.md
k8s/base/: api-deployment.yaml  configmap.yaml  cronjobs.yaml  frontend-deployment.yaml  kustomization.yaml  namespace.yaml  pipeline-deployments.yaml  pvc.yaml
k8s/helm/nyaya/: Chart.yaml  NOTES.txt  values.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
monitoring/grafana/dashboards/: api.json  ingestion.json  pipeline.json
monitoring/loki/: loki-config.yaml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
schema/: alembic.ini  schema.sql  seed.sql
schema/migrations/: env.py
schema/migrations/versions/: 0001_initial_schema.py
services/ai-extractor/: Dockerfile  pyproject.toml
services/ai-extractor/ai_extractor/: confidence_scorer.py  config.py  main.py  (+3 more)
services/anomaly-detection-agent/: README.md  main.py  requirements.txt
services/entity-resolver/: pyproject.toml
services/entity-resolver/entity_resolver/: __init__.py  config.py  main.py  pipeline.py  resolver.py
services/entity-resolver/tests/: test_fir_match.py
services/ingestion/: .dockerignore  Dockerfile  pyproject.toml
services/ingestion/ingestion/: __init__.py  base_adapter.py  config.py  main.py
services/ingestion/ingestion/adapters/: ananda_bazar_adapter.py  ani_adapter.py  dainik_bhaskar_adapter.py  ecourts_adapter.py  mathrubhumi_adapter.py  ncrb_adapter.py  pti_adapter.py  rti_adapter.py
services/moderation-assistant/: README.md
services/multilingual-summarizer/: README.md
services/persistence-worker/: Dockerfile  pyproject.toml
services/privacy-engine/: .dockerignore  Dockerfile  pyproject.toml
services/privacy-engine/privacy_engine/: config.py  main.py  pipeline.py
services/privacy-engine/privacy_engine/redactors/: __init__.py  address_masker.py  image_classifier.py  minor_detector.py  name_redactor.py  phone_email_redactor.py
services/privacy-engine/tests/: test_minor_detector.py  test_name_redactor.py
services/recommendation-agent/: README.md
services/rti-assistant/: README.md
services/shared-python/: pyproject.toml
services/timeline-engine/: pyproject.toml
services/timeline-engine/tests/: test_builder.py
services/timeline-engine/timeline_engine/: builder.py  config.py  main.py  pipeline.py
supabase/migrations/: 001_live_cases.sql  002_legal_precedents_pgvector.sql  20260511000000_init.sql
(+65 files in other folders)
