[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyaya-entity-resolver"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "confluent-kafka>=2.3.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "anthropic>=0.28.0",
  "sentence-transformers>=3.0.0",
  "numpy>=1.26.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "structlog>=24.1.0",
  "prometheus-client>=0.20.0",
  "nyaya-shared",
]

[tool.hatch.build.targets.wheel]
packages = ["entity_resolver"]

[project.scripts]
entity-resolver = "entity_resolver.main:main"
