[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyaya-ingestion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "confluent-kafka>=2.3.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "httpx>=0.27.0",
  "feedparser>=6.0.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "boto3>=1.34.0",
  "apscheduler>=3.10.0",
  "openpyxl>=3.1.0",
  "easyocr>=1.7.0",
  "structlog>=24.1.0",
  "prometheus-client>=0.20.0",
  "nyaya-shared",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "S"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
