[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyaya-privacy-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "confluent-kafka>=2.3.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "boto3>=1.34.0",
  "structlog>=24.1.0",
  "prometheus-client>=0.20.0",
  "nyaya-shared",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "S", "ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
