[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nyaya-timeline-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "confluent-kafka>=2.3.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "structlog>=24.1.0",
  "prometheus-client>=0.20.0",
  "nyaya-shared",
]

[tool.hatch.build.targets.wheel]
packages = ["timeline_engine"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
